Added the Greedy-Dual-Size-Freq policy to the simulator
This implements a size-aware policy with O(lg n) time complexity. This
family of policies is the baseline that newer policies compare
themselves to.