@@ -107,6 +107,16 @@ sonarqube {
   }
 }
 
+tasks.withType(JavaExec) {
+  jvmArgs += [
+    '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-exports', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+  ]
+}
+
 tasks.withType(JavaCompile).configureEach {
   dependsOn downloadCaffeineLocal
   options.compilerArgs << '-Xlint:all,-auxiliaryclass'
